resources/app-sre/uhc-integration/gateway-server.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 5m
  name: gateway-server
  namespace: uhc-integration
spec:
  host: api-integration.6943.hive-integration.openshiftapps.com
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: gateway-server
    weight: 100
